PPC64 and s390: Fix UseMembar and enable ShareVtableStubs

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b31
    • ppc, s390x

      On PPC64, we currently generate unnecessary fence instructions which make performance even worse.
      On s390, the signal handler needs a fix in order to work with -XX:+UseMember.
      In addition, switch on ShareVtableStubs in order to reduce code cache usage. Modern processors don't seem to benefit from having it off it since the predictors have become better.

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: