8188773: PPC64 and s390: Fix UseMembar and enable ShareVtableStubs

Reviewed-by: goetz